# scientific-research-skills

./: LICENSE  README.md  README_CN.md
skills/academic-figure-generation/: SKILL.md
skills/academic-figure-generation/references/: backend_routing.md  patch_overview.md
skills/academic-figure-generation/scripts/: generate.py  patch_multibackend.py
skills/experiment-design/: SKILL.md
skills/literature-search/: SKILL.md
skills/paper-fulltext-harvest/: SKILL.md
skills/paper-fulltext-harvest/references/: browser-fallback.md  tdm-apis.md
skills/paper-fulltext-harvest/scripts/: .env.example  pyproject.toml  redownload_elsevier.py
skills/paper-fulltext-harvest/scripts/auto_paper_download/: __init__.py  __main__.py  clients.py  downloader.py  supplements.py
skills/paper-reading/: SKILL.md
skills/paper-writing/: SKILL.md
skills/related-work-survey/: SKILL.md
skills/research-ideation/: SKILL.md
skills/social-media-paper-triage/: SKILL.md
skills/zotero-management/: SKILL.md
