[project]
name = "auto-paper-download"
version = "0.1.0"
description = "Automated PDF downloader for DOIs exported from Web of Science."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "bs4>=0.0.2",
  "openpyxl>=3.1.5",
  "pandas>=2.3.3",
  "pypdf>=6.9.0",
  "requests>=2.31.0",
]
authors = [
  { name = "Auto Paper Download" },
]

[project.scripts]
auto-paper-download = "auto_paper_download.__main__:main"

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["auto_paper_download"]
